<resources>
    <string name="app_name">room</string>
    <string name="title">学习视图属性--标题1111111111111111111111111111111</string>
    <string name="learn_view">学习视图属性</string>
    <string name="button_1">按钮1</string>
    <string name="input_username">请输入用户名</string>
    <string name="test_image">测试图片</string>
    <string name="send_notify">发送通知</string>
    <string name="cancel_notify">取消通知</string>
    <string name="alert_dialog">对话框</string>
    <string name="popup_window">悬浮窗</string>
    <string name="close">关闭</string>
    <string name="learn_layout">学习布局属性</string>
    <string name="list">列表</string>
    <string name="recycle_list">列表recycle</string>
    <string name="learn_anim">学习动画</string>
    <string name="anim_frame">逐帧动画</string>
    <string name="anim_between">补间动画</string>
    <string name="anim_value">属性动画</string>
    <string name="viewpager">ViewPager</string>
    <string name="viewpager2">ViewPager2</string>
    <string name="page_1">页面1</string>
    <string name="page_2">页面2</string>
    <string name="page_3">页面3</string>
    <string name="learn_fragment">学习fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fragment_one">Fragment-One</string>
    <string name="fragment_two">Fragment-two</string>
    <string name="message">通信</string>
    <string name="hello">hello</string>
    <string name="we_chat">微信</string>
    <string name="chat_with">微信聊天</string>
    <string name="contract">通讯录</string>
    <string name="friends">朋友圈</string>
    <string name="learn_broadcast">学习广播</string>
    <string name="send_broadcast">发送广播</string>
    <string name="learn_file">学习文件存储</string>
    <string name="learn_sp">学习SP存储</string>
    <string name="learn_db">学习数据库</string>
    <string name="learn_service">学习服务</string>
    <string name="start_thread">开启子线程</string>
    <string name="start_service">开启服务</string>
    <string name="stop_service">停止服务</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解绑服务</string>
    <string name="learn_provider">学习内容提供器</string>
    <string name="learn_glide">学习glide图片加载</string>
    <string name="learn_okhttp">学习http</string>
    <string name="learn_room">学习room</string>
</resources>