<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_learn_view"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/learn_view"
            android:background="@color/red"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/bt_learn_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/learn_layout"
            android:background="@color/blue"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/bt_learn_anim"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/learn_anim"
            android:background="#4CAF50"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/bt_learn_fragment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/learn_fragment"
            android:background="#FFEB3B"
            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>