<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="#E0E0E0"
    android:layout_height="55dp">

    <LinearLayout
        android:id="@+id/tab_we_chat"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/img_chat"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/chat"
            android:contentDescription="@string/chat_with">
        </ImageView>
        <TextView
            android:text="@string/we_chat"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="22dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_contract"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/img_contract"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/contrat"
            android:contentDescription="@string/chat_with">
        </ImageView>
        <TextView
            android:text="@string/contract"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="22dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_friends"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/img_friends"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/friends"
            android:contentDescription="@string/chat_with">
        </ImageView>
        <TextView
            android:text="@string/friends"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="22dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_mine"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:id="@+id/img_mine"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/settings"
            android:contentDescription="@string/chat_with">
        </ImageView>
        <TextView
            android:text="@string/we_chat"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="22dp">
        </TextView>
    </LinearLayout>
</LinearLayout>